@@ -46,7 +46,7 @@ test.Language.variadic <- function(){
 		return Language( "rnorm", 10, Named("mean",0.0), 2.0 ) ;
 		', Rcpp=TRUE, verbose=TRUE, includes = "using namespace Rcpp;" )
 		checkEquals( funx(), call("rnorm", 10L, mean = 0.0, 2.0 ), 
-			msg = "variadic templates" )
+			msg = "variadic templates (with names)" )
 	}
 }
 
